--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     margin:0;
     padding:0;
     font-family: 'Roboto Slab', serif;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 table {
     border-collapse: collapse;
